log
Wed 27 Mar 2024 08:01:08 PM UTC: 
 tests:  0|6
total_score: 0/70
38f1cdb
Wed 27 Mar 2024 08:08:33 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
00d1d95
Wed 27 Mar 2024 08:10:00 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
6246eb6
Wed 27 Mar 2024 08:18:07 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|5
total_score: 15/70
7d608ff
Wed 27 Mar 2024 08:20:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:48:1: error: control reaches end of non-void function [-Werror=return-type]
   48 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
81782e3
Wed 27 Mar 2024 08:21:54 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
a7fdcf2
Wed 27 Mar 2024 08:23:48 PM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  5|4
total_score: 25/70
50a8865
Wed 27 Mar 2024 08:24:51 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
2f003fd
Wed 27 Mar 2024 08:28:06 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
a7161a1
Wed 27 Mar 2024 08:29:48 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  9|3
total_score: 35/70
2c8f69f
Wed 27 Mar 2024 08:34:46 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
281f3d8
Wed 27 Mar 2024 08:37:51 PM UTC: 
 list.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  10|2
total_score: 45/70
87d2c20
Wed 27 Mar 2024 08:39:20 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
cb760ec
Wed 27 Mar 2024 08:44:09 PM UTC: 
 list.c | 11 ++---------
 1 file changed, 2 insertions(+), 9 deletions(-)
In file included from test.c:5:
list.c:93:5: error: data definition has no type or storage class [-Werror]
   93 |     pushCurrent(list,data);
      |     ^~~~~~~~~~~
list.c:93:5: error: type defaults to ‘int’ in declaration of ‘pushCurrent’ [-Werror=implicit-int]
list.c:93:5: error: parameter names (without types) in function declaration [-Werror]
list.c:93:5: error: conflicting types for ‘pushCurrent’; have ‘int()’
In file included from list.c:4,
                 from test.c:5:
list.h:20:6: note: previous declaration of ‘pushCurrent’ with type ‘void(List *, void *)’ {aka ‘void(struct List *, void *)’}
   20 | void pushCurrent(List * list, void * data);
      |      ^~~~~~~~~~~
In file included from test.c:5:
list.c:94:1: error: expected identifier or ‘(’ before ‘}’ token
   94 | }
      | ^
list.c: In function ‘pushCurrent’:
list.c:98:1: error: expected expression before ‘}’ token
   98 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
fe8afd3
Wed 27 Mar 2024 08:44:21 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:97:1: error: expected expression before ‘}’ token
   97 | }
      | ^
Compilation failed
c50bf57
Wed 27 Mar 2024 08:44:34 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
cc3306a
Wed 27 Mar 2024 08:45:58 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
e9ced31
Wed 27 Mar 2024 08:47:39 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
171d3e4
Wed 27 Mar 2024 08:50:04 PM UTC: 
 list.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
ee0cb0c
Wed 27 Mar 2024 08:50:24 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|1
total_score: 55/70
084809b
Wed 27 Mar 2024 08:54:19 PM UTC: 
 list.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  0|0
1d8fbc3
Wed 27 Mar 2024 08:55:53 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:131:10: error: unused variable ‘data’ [-Werror=unused-variable]
  131 |   void * data = list->current->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
99aa08b
Wed 27 Mar 2024 08:56:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:131:10: error: unused variable ‘dato’ [-Werror=unused-variable]
  131 |   void * dato = list->current->data;
      |          ^~~~
cc1: all warnings being treated as errors
Compilation failed
ca9de55
Wed 27 Mar 2024 08:56:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:131:9: error: unused variable ‘dato’ [-Werror=unused-variable]
  131 |   int * dato = list->current->data;
      |         ^~~~
cc1: all warnings being treated as errors
Compilation failed
ca9de55
Wed 27 Mar 2024 08:57:16 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  0|0
de00671
Wed 27 Mar 2024 08:57:42 PM UTC: 
 list.c | 14 +-------------
 1 file changed, 1 insertion(+), 13 deletions(-)
 tests:  11|1
total_score: 55/70
e3f08ae
